[gd_scene load_steps=16 format=2]

[ext_resource path="res://Tri/Tri.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sound/r0.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sound/r2.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sound/g0.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sound/r1.ogg" type="AudioStream" id=6]
[ext_resource path="res://Level/Level.gd" type="Script" id=7]
[ext_resource path="res://Level/Score.gd" type="Script" id=8]
[ext_resource path="res://Level/CountDownText.gd" type="Script" id=9]
[ext_resource path="res://Sound/speed_boost.ogg" type="AudioStream" id=10]
[ext_resource path="res://Sound/UhOh.ogg" type="AudioStream" id=11]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Gugi-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/Gugi-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = SubResource( 3 )

[node name="Level" type="Node2D"]
script = ExtResource( 7 )

[node name="Tri" parent="." instance=ExtResource( 1 )]
position = Vector2( 304, 200 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 304, 200 )
z_index = 1

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="TestVector" type="Line2D" parent="."]
z_index = 1
default_color = Color( 1, 0, 0.282353, 1 )

[node name="Chimes" type="Node" parent="."]

[node name="Chime0" type="AudioStreamPlayer" parent="Chimes"]
stream = ExtResource( 4 )
bus = "FX"

[node name="Chime1" type="AudioStreamPlayer" parent="Chimes"]
stream = ExtResource( 6 )
bus = "FX"

[node name="Chime2" type="AudioStreamPlayer" parent="Chimes"]
stream = ExtResource( 3 )
bus = "FX"

[node name="GoldSounds" type="Node" parent="."]

[node name="GoldCollected0" type="AudioStreamPlayer" parent="GoldSounds"]
stream = ExtResource( 5 )
bus = "FX"

[node name="OtherSounds" type="Node" parent="."]

[node name="SpeedUp" type="AudioStreamPlayer" parent="OtherSounds"]
stream = ExtResource( 10 )
bus = "FX"

[node name="SpeedPenalty" type="AudioStreamPlayer" parent="OtherSounds"]
stream = ExtResource( 11 )
bus = "FX"

[node name="Instructions" type="Label" parent="."]
margin_left = 16.0
margin_top = 88.0
margin_right = 597.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 4 )
text = "60 seconds to get gold.
Left / Right to choose direction.
Chose direction at intersection to speed boost."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer_UI" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer_UI"]
margin_left = -104.0
margin_right = -64.0
margin_bottom = 40.0
rect_scale = Vector2( 18.0618, 1.78987 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="CanvasLayer_UI"]
margin_left = -8.0
margin_top = 8.0
margin_right = 151.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 2 )
text = "GOLD:
"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="CanvasLayer_UI"]
margin_left = 160.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 2 )
text = "000"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountDownText" type="Label" parent="CanvasLayer_UI"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 432.0
margin_top = 8.0
margin_right = 591.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 2 )
text = "60
"
align = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountDownTimer" type="Timer" parent="CanvasLayer_UI/CountDownText"]

[node name="ChimeTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="GoldGatheredTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerBoostFeedbackTimer" type="Timer" parent="."]
one_shot = true

[node name="BoostTween" type="Tween" parent="."]

[connection signal="timeout" from="CanvasLayer_UI/CountDownText/CountDownTimer" to="CanvasLayer_UI/CountDownText" method="_on_CountDownTimer_timeout"]
[connection signal="timeout" from="ChimeTimer" to="." method="_on_ChimeTimer_timeout"]
[connection signal="timeout" from="GoldGatheredTimer" to="." method="_on_GoldGatheredTimer_timeout"]
[connection signal="tween_completed" from="BoostTween" to="." method="_on_BoostTween_tween_completed"]
